--- a/src/Interfaz/registrarCliente_Interfaz.form
+++ b/src/Interfaz/registrarCliente_Interfaz.form
@@ -26,22 +26,30 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel2" pref="167" max="32767" attributes="0"/>
+                  <Component id="jLabel2" max="32767" attributes="0"/>
                   <Component id="jLabel3" max="32767" attributes="0"/>
                   <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="mesaUbicacionTextField" max="32767" attributes="0"/>
-                  <Component id="documentoTextField" pref="167" max="32767" attributes="0"/>
-                  <Component id="diaIngresoTextField1" max="32767" attributes="0"/>
+                  <Component id="documentoTextField" alignment="0" pref="167" max="32767" attributes="0"/>
+                  <Component id="diaIngresoTextField1" pref="167" max="32767" attributes="0"/>
+                  <Component id="mesaUbicacionTextField" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
           </Group>
-          <Group type="102" alignment="1" attributes="0">
+          <Group type="102" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="150" max="-2" attributes="0"/>
+                      <Component id="ingresarCliente" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="125" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="jLabel1" min="-2" pref="113" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="135" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -65,7 +73,9 @@
                   <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="diaIngresoTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="114" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="ingresarCliente" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="73" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -73,7 +83,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Cafe la Esquina"/>
+        <Property name="text" type="java.lang.String" value="Cafe la Esquina Reservaciones"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="documentoTextField">
@@ -88,7 +98,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="mesa donde se ubico:"/>
+        <Property name="text" type="java.lang.String" value="Mesa donde se ubicara la persona:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="mesaUbicacionTextField">
@@ -98,12 +108,20 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Dia de la semana:"/>
+        <Property name="text" type="java.lang.String" value="Dia de la semana que se reservara:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="diaIngresoTextField1">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="diaIngresoTextField1ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="ingresarCliente">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Ingresar Cliente"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ingresarClienteActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
