--- a/src/Interfaz/menuInicio.form
+++ b/src/Interfaz/menuInicio.form
@@ -24,24 +24,33 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace min="-2" pref="154" max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="165" max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="ingresarClienteBTN" min="-2" max="-2" attributes="0"/>
-                  <Component id="totalClientesSemana" max="32767" attributes="0"/>
-                  <Component id="clientesMesas" alignment="0" max="32767" attributes="0"/>
-              </Group>
-              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="totalClientesDia" min="-2" max="-2" attributes="0"/>
-                  <Component id="consultarClientesBTN" min="-2" pref="165" max="-2" attributes="0"/>
-                  <Component id="diaMaximoClientes" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="totalClientesSemana" max="32767" attributes="0"/>
+                          <Component id="clientesMesas" alignment="0" max="32767" attributes="0"/>
+                          <Component id="ingresarClienteBTN" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="44" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="consultarClientesBTN" pref="165" max="32767" attributes="0"/>
+                          <Component id="totalClientesDia" alignment="0" max="32767" attributes="0"/>
+                          <Component id="diaMaximoClientes" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="154" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="106" max="-2" attributes="0"/>
+              <Component id="buscarCedulaBTN" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -52,8 +61,8 @@
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="consultarClientesBTN" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                  <Component id="ingresarClienteBTN" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="consultarClientesBTN" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ingresarClienteBTN" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -65,7 +74,9 @@
                   <Component id="clientesMesas" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="diaMaximoClientes" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="79" max="32767" attributes="0"/>
+              <EmptySpace pref="38" max="32767" attributes="0"/>
+              <Component id="buscarCedulaBTN" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -73,7 +84,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Cafe la Esquina"/>
+        <Property name="text" type="java.lang.String" value="Menu Cafe la Esquina"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="consultarClientesBTN">
@@ -86,7 +97,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="ingresarClienteBTN">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Ingresar Clientes"/>
+        <Property name="text" type="java.lang.String" value="Ingresar Cliente"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ingresarClienteBTNActionPerformed"/>
@@ -122,6 +133,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="diaMaximoClientesActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="buscarCedulaBTN">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Buscar por numero de cedula"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buscarCedulaBTNActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
